crates/qwik-optimizer-oxc/tests/snapshots/example_missing_custom_inlined_functions.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ as Component, $ as onRender, useStore, wrap, useEffect } from "@qwik.dev/core";

export const useMemo$ = (qrt) => {
  useEffect(qrt);
};

export const App = component$((props) => {
  const state = useStore({ count: 0 });
  useMemo$(() => {
    console.log(state.count);
  });
  return $(() => <div>{state.count}</div>);
});

=== test.js ===
import { _jsxSorted } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { wrap } from "@qwik.dev/core";
import { useEffect } from "@qwik.dev/core";
export const useMemo$ = (qrt) => {
  useEffect(qrt);
};
export const App = component$((props) => {
  const state = useStore({ count: 0 });
  useMemo$(() => {
    console.log(state.count);
  });
  return $(() => /* @__PURE__ */ _jsxSorted("div", null, null, state.count, 3, "u6_0"));
});
