crates/qwik-optimizer-oxc/tests/snapshots/example_of_synchronous_qrl.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { sync$, component$ } from "@qwik.dev/core";

export default component$(() => {
  return (
    <>
      <input
        onClick$={sync$(function (event, target) {
          // comment should be removed
          event.preventDefault();
        })}
      />
      <input
        onClick$={sync$((event, target) => {
          event.preventDefault();
        })}
      />
      <input onClick$={sync$((event, target) => event.preventDefault())} />
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_default_component_XXXXXXXXXXXX");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "default_component_XXXXXXXXXXXX"),
);

=== test.tsx_default_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _qrlSync } from "@qwik.dev/core";
export const default_component_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(
        "input",
        null,
        {
          "q-e:click": _qrlSync(function (event, target) {
            event.preventDefault();
          }, "(function(event, target) {\n	event.preventDefault();\n})"),
        },
        null,
        3,
        "u6_0",
      ),
      /* @__PURE__ */ _jsxSorted(
        "input",
        null,
        {
          "q-e:click": _qrlSync((event, target) => {
            event.preventDefault();
          }, "(event, target) => {\n	event.preventDefault();\n}"),
        },
        null,
        3,
        "u6_1",
      ),
      /* @__PURE__ */ _jsxSorted(
        "input",
        null,
        {
          "q-e:click": _qrlSync(
            (event, target) => event.preventDefault(),
            "(event, target) => event.preventDefault()",
          ),
        },
        null,
        3,
        "u6_2",
      ),
    ],
    1,
    "u6_3",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "default_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_default_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_default_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
