crates/qwik-optimizer-oxc/tests/snapshots/example_optimization_issue_3542.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export const AtomStatus = component$(({ ctx, atom }) => {
  let status = atom.status;
  if (!atom.real) {
    status = "WILL-VANISH";
  } else if (JSON.stringify(atom.atom) == JSON.stringify(atom.real)) {
    status = "WTFED";
  }
  return (
    <span
      title={atom.ID}
      onClick$={(ev) => atomStatusClick(ctx, ev, [atom])}
      class={["atom", status, ctx.store[atom.ID] ? "selected" : null]}
    ></span>
  );
});

=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export const AtomStatus = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl((_rawProps) => {
    let status = _rawProps.atom.status;
    if (!_rawProps.atom.real) {
      status = "WILL-VANISH";
    } else if (JSON.stringify(undefined) == JSON.stringify(undefined)) {
      status = "WTFED";
    }
    return (
      <span
        title={atom.ID}
        onClick$={
          /* @__PURE__ */ inlinedQrl(
            (ev) => atomStatusClick(ctx, ev, [atom]),
            "AtomStatus_component_span_q_e_click_umHjCmk9egM",
            [ctx, atom],
          )
        }
        class={["atom", status, ctx.store[atom.ID] ? "selected" : null]}
      ></span>
    );
  }, "AtomStatus_component_BHJ0BemzHIo"),
);

=== DIAGNOSTICS ===

[]
