crates/qwik-optimizer-oxc/tests/snapshots/example_optimization_issue_3561.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export const Issue3561 = component$(() => {
  const props = useStore({
    product: {
      currentVariant: {
        variantImage: "image",
        variantNumber: "number",
        setContents: "contents",
      },
    },
  });
  const { currentVariant: { variantImage, variantNumber, setContents } = {} } = props.product;

  console.log(variantImage, variantNumber, setContents);

  return <p></p>;
});

=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export const Issue3561 = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(() => {
    const props = useStore({
      product: {
        currentVariant: {
          variantImage: "image",
          variantNumber: "number",
          setContents: "contents",
        },
      },
    });
    const { currentVariant: { variantImage, variantNumber, setContents } = {} } = props.product;
    console.log(variantImage, variantNumber, setContents);
    return <p></p>;
  }, "Issue3561_component_NKh3QDDWxo4"),
);
