crates/qwik-optimizer-oxc/tests/snapshots/example_optimization_issue_4386.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export const FOO_MAPPING = {
  A: 1,
  B: 2,
  C: 3,
};

export default component$(() => {
  const key = "A";
  const value = FOO_MAPPING[key];

  return <>{value}</>;
});

=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export const FOO_MAPPING = {
  A: 1,
  B: 2,
  C: 3,
};
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(() => {
    const key = "A";
    const value = FOO_MAPPING[key];
    return <>{value}</>;
  }, "default_component_jN9ZUuuADmk"),
);

=== DIAGNOSTICS ===

[]
