crates/qwik-optimizer-oxc/tests/snapshots/example_parsed_inlined_qrls.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { componentQrl, inlinedQrl, useStore, jsxs, jsx, useLexicalScope } from "@qwik.dev/core";

export const App = /*#__PURE__*/ componentQrl(
  inlinedQrl(() => {
    useStyles$(inlinedQrl(STYLES, "STYLES_odz7dfdfdM"));
    useStyles$(inlinedQrl(STYLES, "STYLES_odzdfdfdM"));

    const store = useStore({
      count: 0,
    });
    return /*#__PURE__*/ jsxs("div", {
      children: [
        /*#__PURE__*/ jsxs("p", {
          children: ["Count: ", store.count],
        }),
        /*#__PURE__*/ jsx("p", {
          children: /*#__PURE__*/ jsx("button", {
            onClick$: inlinedQrl(
              () => {
                const [store] = useLexicalScope();
                return store.count++;
              },
              "App_component_div_p_button_onClick_odz7eidI4GM",
              [store],
            ),
            children: "Click",
          }),
        }),
      ],
    });
  }, "App_component_Fh88JClhbC0"),
);

export const STYLES = ".red { color: red; }";

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { jsxs } from "@qwik.dev/core";
import { jsx } from "@qwik.dev/core";
import { useLexicalScope } from "@qwik.dev/core";
export const App = /* @__PURE__ */ componentQrl(inlinedQrl(() => {
	useStyles$(inlinedQrl(STYLES, "STYLES_odz7dfdfdM"));
	useStyles$(inlinedQrl(STYLES, "STYLES_odzdfdfdM"));
	const store = useStore({ count: 0 });
	return /* @__PURE__ */ jsxs("div", { children: [/* @__PURE__ */ jsxs("p", { children: ["Count: ", store.count] }), /* @__PURE__ */ jsx("p", { children: /* @__PURE__ */ jsx("button", {
		onClick$: inlinedQrl(() => {
			const [store] = useLexicalScope();
			return store.count++;
		}, "App_component_div_p_button_onClick_odz7eidI4GM", [store]),
		children: "Click"
	}) })] });
}, "App_component_Fh88JClhbC0"));
export const STYLES = ".red { color: red; }";
