crates/qwik-optimizer-oxc/tests/snapshots/example_preserve_filenames.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useStore } from "@qwik.dev/core";
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl((props) => {
	return /* @__PURE__ */ _jsxSorted(Cmp, null, null, /* @__PURE__ */ _jsxSorted("p", null, {
		class: "stuff",
		"q-e:click": () => console.log("warn")
	}, "Hello Qwik", 3, "u6_0"), 3, "u6_1");
}, "App_component_XumqEURaLxI"));
