crates/qwik-optimizer-oxc/tests/snapshots/example_preserve_filenames_segments.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test.tsx_App_component_XumqEURaLxI.js");
const i_0VoFXPYUR5E = () => import("./test.tsx_App_component_p_q_e_click_0VoFXPYUR5E.js");
import { useStore } from "@qwik.dev/core";
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));
export const foo = () => console.log("foo");

=== test.tsx_App_component_XumqEURaLxI.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_0VoFXPYUR5E = () => import("./test.tsx_App_component_p_q_e_click_0VoFXPYUR5E.js");
import { _jsxSorted } from "@qwik.dev/core";
import { foo } from "./test";
export const App_component_XumqEURaLxI = (props: Stuff) => {
	foo();
	return /* @__PURE__ */ _jsxSorted(Cmp, null, null, /* @__PURE__ */ _jsxSorted("p", null, {
		class: "stuff",
		"q-e:click": /* @__PURE__ */ qrl(i_0VoFXPYUR5E, "App_component_p_q_e_click_0VoFXPYUR5E")
	}, "Hello Qwik", 3, "u6_0"), 3, "u6_1");
}

=== test.tsx_App_component_p_q_e_click_0VoFXPYUR5E.js === (ENTRY)
export const App_component_p_q_e_click_0VoFXPYUR5E = () => console.log("warn");
